Fix: Install flet[all] and add Android SDK setup

--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Install Flet
         run: |
-          pip install flet
+          pip install "flet[all]"
 
       - name: Set up Java
         uses: actions/setup-java@v4
@@ -28,9 +28,12 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
 
+      - name: Setup Android SDK
+        uses: android-actions/setup-android@v3
+
       - name: Build APK
         run: |
-          flet build apk --project Assister --org com.assister --yes
+          flet build apk --project Assister --org com.assister --yes --no-rich-output
 
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
